<resources>
    <string name="app_name">Expense Diary</string>
    <string name="action_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_delete">Delete</string>
    <string name="hint_expense_description">Expense Description</string>
    <string name="hint_expense_amount">Expense Amount</string>
    <string name="hint_expense_date">Expense Date</string>
    <string name="hint_expense_time">Expense Time</string>
    <string name="content_desc_fab_add">Add Expense</string>
    <string name="btn_save">Save</string>
    <string name="msg_signed_in">Signed in!</string>
    <string name="msg_sign_in_canceled">Sign in canceled</string>
    <string name="msg_saved">Saved!</string>
    <string name="msg_deleted">Deleted!</string>
    <string name="msg_empty_description">Description field is empty!</string>
    <string name="msg_not_valid_amount">Amount should be bigger than $0.00</string>
    <string name="appwidget_title">Today\'s Expense</string>
    <string name="appwidget_amount_default">Load</string>
    <string name="add_widget">Add widget</string>
</resources>
